...
        adjustsFontForContentSizeCategory = true
        autocorrectionType = .default
        smartDashesType = .default
        smartQuotesType = .default
        returnKeyType = .send
        keyboardDismissMode = .interactive
        accessibilityIdentifier = "garyx-composer-uikit-input"
        accessibilityTraits.insert(.notEnabled)
        updateDebugAccessibilityState()
        addInteraction(UIScribbleInteraction(delegate: self))
    }

    required init?(coder: NSCoder) {
...
        coordinator.parent.onUnregister(view)
        view.makeReadOnly()
    }

    private func requestDebugFocusIfNeeded(on view: GaryxComposerOrderedTextView) {
        #if DEBUG
        guard ProcessInfo.processInfo.environment["GARYX_MOBILE_PRODUCTION_ROUTE_AUTO_FOCUS"] == "1"
        else { return }
        DispatchQueue.main.async { [weak view] in
            view?.requestFocus()
        }
        #endif
    }
...
